--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,7 @@ textarea#comment::placeholder {
 .copyright_section {
     width: 100%;
     float: left;
-    background-color: #ffffff;
+    background-color: #000000;
     height: auto;
 }
 
@@ -1111,7 +1111,7 @@ textarea#comment::placeholder {
     float: left;
     font-size: 16px;
     text-align: center;
-    color: #151515;
+    color: #759ab8;
     margin-left: 0px;
     margin-right: 0px;
 }
